src/test/deca/syntax/invalid/test38_decl_method.deca
// Description:
//    Programme testant les declarations de methodes.
//	  Etape(s) : A
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//	  Contextuellement : NON
//
// Resultats:
// 	  test_lex : pas d'erreur
//    test_synt : erreur ligne 16 : no viable alternative at input 'fct('
//
// Historique:
//    cree le 17/01/2020

class A {
	fct(){}
}